# autoscaling-reinforcement-learning

./: .env.example  .gitignore  Makefile  README.md  compose.dev.yaml  compose.yaml  dump.py  func.py  predict.py  pyproject.toml  requirements.txt  ruff.toml  train.py  trainer.py
database/: __init__.py  influxdb.py
environment/: __init__.py  environment.py  fuzzy.py
influxdb/: influx.py  influxdb.py
load/: k6-cpu100vus-30m-5stage.js  k6-cpu35vus-memory100vus-1h.js  k6-cpu35vus-memory75vus-30m-10stage.js  k6-cpu35vus-memory75vus-30m-5stage.js  k6-cpu50vus-30m-5stages.js  k6-cpu50vus-memory150vus-30m.js  k6-cpu50vus-memory200vus-30m-5stages.js  k6-each-100vus.js  k6-each-25vus.js  k6-each-30vus.js  k6-each-40vus.js  k6.js  stress_analyze.js  stress_order.js  stress_predict.js
load-resource-intensive-i/: k6-cpu20vus-memory50vus.js  k6-cpu35vus-memory100vus-30m-5stage.js  k6-cpu35vus-memory200vus-30m-5stage.js  k6-cpu35vus-memory50vus-30m-5stage.js  k6-cpu35vus-memory75vus-30m-5stage.js  k6-cpu50vus-memory500vus-30m-5stages.js  k6-each-50vus-30m-10stages.js  k6-memory500vus-30m-5stage.js  seed_analyze.json  stress_analyze.js  stress_order.js  stress_predict.js
load-resource-intesive-ii/: k6-stress-test-cpu.js  k6-stress-test-memory.js
model/: agent.py  train.py
model/environment/: __init__.py  environment.py
model/environment/utils/: cluster.py  metrics.py
rl/: __init__.py  fuzzy.py  q_learning.py  q_learning_fuzzy.py
utils/: __init__.py  cluster.py  helper.py  logger.py  metrics.py
(+4 files in other folders)
