[project]
name = "autoscaling"
version = "0.1.0"
description = "Project for research at ICN Laboratory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "kubernetes>=33.1.0",
    "stable-baselines3[extra]>=2.6.0",
    "aiohttp>=3.12.14",
    "requests>=2.32.4",
    "numpy>=2.1.3",
    "prometheus-client>=0.22.1",
    "influxdb>=5.3.2",
]
